[package]
name = "breadboard"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
description = "A simple JSON API request router for hyper"
readme = "README.md"
repository = "https://github.com/ilianaw/breadboard"
license = "MIT/Apache-2.0"
exclude = [".gitignore"]

[profile.release]
lto = true

[dependencies]
futures = "0.1.25"
hyper = { version = "0.12.13", default-features = false }
regex = "1.0.5"
serde = "1.0.80"
serde_json = "1.0.32"

[dev-dependencies]
env_logger = "0.5.13"
hyper = "0.12.13"
serde_derive = "1.0.80"
